maintainIT2/src/objects/Asset__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Designates whether or not the asset is active.</description>
        <inlineHelpText>Check this box if the asset is still active and being tracked by your agency.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssetRecordType__c</fullName>
        <description>DO NOT EDIT THIS PICKLIST.  System populated via workflow.  Field security should be set to read only for all user profiles.  If you configure additional Recordtypes on the Asset Tag object, enter the Name of the recordtype as a value in this picklist, set as the only available and default value for the recordtype.  This will enable you to configure validation rules and other platform features not otherwise available on a recordtype.</description>
        <inlineHelpText>Asset Record Type - DO NOT EDIT THIS PICKLIST.  System populated via workflow.  Field security should be set to read only for all user profiles.</inlineHelpText>
        <label>Asset RecordType</label>
        <picklist>
            <picklistValues>
                <fullName>Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Class__c</fullName>
        <description>Asset Class used in Class/SubClass for categorization - User Defined</description>
        <inlineHelpText>Asset Class used in Class/SubClass for categorization - User Defined</inlineHelpText>
        <label>Asset Class</label>
        <picklist>
            <picklistValues>
                <fullName>Agitator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Conditioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Dryer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water System</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Code__c</fullName>
        <label>Asset Code</label>
        <picklist>
            <picklistValues>
                <fullName>10000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10111</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10112</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10113</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10121</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10122</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10205</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10206</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10211</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10212</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10213</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10215</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10216</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10311</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10312</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10313</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10321</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10322</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10323</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10330</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset Group</description>
        <inlineHelpText>Asset Group</inlineHelpText>
        <label>Asset Group</label>
        <referenceTo>Maintenance_Group__c</referenceTo>
        <relationshipLabel>Asset Tags</relationshipLabel>
        <relationshipName>Asset</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Number__c</fullName>
        <description>Asset Number - System Generated Unique Number for each Maintenance Asset Record.  Can be used in conjunction with Auto Asset ID Numbering</description>
        <displayFormat>{000000}</displayFormat>
        <inlineHelpText>Asset Number - System Generated Unique Number for each Maintenance Asset Record.  Can be used in conjunction with Auto Asset ID Numbering</inlineHelpText>
        <label>Asset Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Asset_Priority__c</fullName>
        <description>Asset Priority - User Defined</description>
        <inlineHelpText>Asset Priority - User Defined</inlineHelpText>
        <label>Asset Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_SubClass__c</fullName>
        <description>Dependent Picklist Asset SubClass in Class/SubClass categorization - User Defined.  SubClass Values controlled by Class Values</description>
        <inlineHelpText>Dependent Picklist Asset SubClass in Class/SubClass categorization - User Defined.  SubClass Values controlled by Class Values</inlineHelpText>
        <label>Asset SubClass</label>
        <picklist>
            <controllingField>Asset_Class__c</controllingField>
            <picklistValues>
                <fullName>Sub Class 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorcycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lift Station</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storm Water Drain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manhole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City field for Asset Tag Address</description>
        <inlineHelpText>City Address</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <picklist>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Condition_Assessment__c</fullName>
        <label>Condition Assessment</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adequate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marginal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country field for Asset Tag Address</description>
        <inlineHelpText>Country Address</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Purchased__c</fullName>
        <label>Date Purchased</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Mobile Asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dept__c</fullName>
        <description>Asset Tag Department - User Defined</description>
        <inlineHelpText>Department</inlineHelpText>
        <label>Dept</label>
        <picklist>
            <picklistValues>
                <fullName>Dept A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Dept B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dept C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dept 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dept 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dept 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Device_RecordType_Name__c</fullName>
        <formula>Device__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device RecordType Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>Device__c.Asset__c</valueField>
            </filterItems>
            <filterItems>
                <field>Device__c.Asset__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disposal_Date__c</fullName>
        <label>Disposal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Doors__c</fullName>
        <description>Number of Doors for Vehicle - User Defined</description>
        <inlineHelpText>Number of Doors</inlineHelpText>
        <label>Number of Doors</label>
        <picklist>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Element__c</fullName>
        <label>Element</label>
        <picklist>
            <controllingField>Sub_Category__c</controllingField>
            <picklistValues>
                <fullName>At Grade Ballast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Grade-In-Street</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elevated Structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elevated Fill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retained Cut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Fixation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ballasted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Embedded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fencing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retaining Walls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turnaround</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bus Turnaround Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIS/IT/Network Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commuter Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heavy Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Light Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wayside Train Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onboard Train Control (cab signaling)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engine__c</fullName>
        <description>Engine Information for a Vehicle Asset Tag type.  User Defined</description>
        <inlineHelpText>Engine</inlineHelpText>
        <label>Engine</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Asset_ID__c</fullName>
        <description>Unique External ID which can be used to access the Asset Tag record thru the API</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique External ID which can be used to access the Maintenance Asset record thru the API</inlineHelpText>
        <label>External Asset ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fleet__c</fullName>
        <label>Fleet</label>
        <picklist>
            <picklistValues>
                <fullName>Truck -1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crv - 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fuel_Type__c</fullName>
        <description>Fuel Type - User Defined</description>
        <inlineHelpText>Fuel Type</inlineHelpText>
        <label>Fuel Type</label>
        <picklist>
            <picklistValues>
                <fullName>Gasoline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diesel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flex Fuel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid-Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bio-Diesel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gross_Vehicle_Weight__c</fullName>
        <description>Gross Vehicle Weight (GVW) - User Defined</description>
        <inlineHelpText>Gross Vehicle Weight (GVW)</inlineHelpText>
        <label>Gross Vehicle Weight</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Display__c</fullName>
        <description>Field Displayed on the Asset Hierarchy.  Can be manually edited or updated with Field Update Workflows capturing values from other fields thereby enabling the display text to be customer specific.</description>
        <inlineHelpText>Field Displayed on the Asset Hierarchy.  Can be written to with Field Update Workflows capturing values from other fields thereby enabling the display test to be customer specific.</inlineHelpText>
        <label>Hierarchy Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Sort_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the sort order for an asset position within a node on the Asset Hierarchy Visualforce page.</description>
        <inlineHelpText>Controls the sort order for an asset position within a node on the Asset Hierarchy Visualforce page.</inlineHelpText>
        <label>Hierarchy Sort Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ID_Description__c</fullName>
        <description>Asset ID &amp; Description (concatenated)</description>
        <formula>Name &amp; &quot;  &quot; &amp;  Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Asset ID &amp; Description (concatenated - used for easy grouping on Reports)</inlineHelpText>
        <label>ID &amp; Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>In_Service_Date__c</fullName>
        <description>Date that Asset was placed into service - User defined</description>
        <inlineHelpText>Date that Asset was placed into service - User defined</inlineHelpText>
        <label>In Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Plate__c</fullName>
        <label>License Plate</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Make</label>
        <referenceTo>Make__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mfg_Date__c</fullName>
        <description>Date the Asset was manufactured - User Defined</description>
        <inlineHelpText>Date the Asset was manufactured - User Defined</inlineHelpText>
        <label>Mfg Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mfg_Year__c</fullName>
        <description>Manufacturer Year</description>
        <inlineHelpText>Manufacturer Year</inlineHelpText>
        <label>Mfg Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mode_Description__c</fullName>
        <label>Mode Description</label>
        <picklist>
            <picklistValues>
                <fullName>LR - Light Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SY - Systemwide Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB - Motor Bus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR - Commuter Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR - Demand Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP - Vanpool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRT - Bus Rapid Transit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR - Heavy Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OR - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC - Cable Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JT - Jitney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TB - Trolleybus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TR - Aerial Tramway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FB - Ferry Boat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO - Monorail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <label>Mode</label>
        <picklist>
            <controllingField>Mode_Description__c</controllingField>
            <picklistValues>
                <fullName>BRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Model_Number__c</fullName>
        <description>Asset Model Number - User Defined</description>
        <inlineHelpText>Asset Model Number - User Defined</inlineHelpText>
        <label>Model Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Year__c</fullName>
        <label>Model Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Model</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Make__c</field>
                <operation>equals</operation>
                <valueField>Model__c.Make__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Model__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nameplate_Data__c</fullName>
        <description>Nameplate Data.  Multi-Line Text Field - User Defined</description>
        <inlineHelpText>Nameplate Data.  Multi-Line Text Field - User Defined</inlineHelpText>
        <label>Nameplate Data</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Odometer__c</fullName>
        <label>Odometer</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <description>Purchase Order Number Relating to Asset Purchase - User Defined</description>
        <inlineHelpText>Purchase Order Number Relating to Asset Purchase - User Defined</inlineHelpText>
        <label>PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Description__c</fullName>
        <description>Formula referencing the Parent Asset Description</description>
        <formula>Parent__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula referencing the Parent Asset Description</inlineHelpText>
        <label>Parent Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Asset Tag in the physical/logical parent-child heirarchy</description>
        <inlineHelpText>Parent in the physical/logical parent-child heirarchy</inlineHelpText>
        <label>Parent Asset ID</label>
        <referenceTo>Asset__c</referenceTo>
        <relationshipLabel>Child Asset Tags</relationshipLabel>
        <relationshipName>Children</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parts_Expense_Account__c</fullName>
        <description>Parts Expense Account - User Defined</description>
        <inlineHelpText>Parts Expense Account</inlineHelpText>
        <label>Parts Expense Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passenger_Seats__c</fullName>
        <description>Number of Passenger Seats for Vehicle - User Defined</description>
        <inlineHelpText>Number of Passenger Seats</inlineHelpText>
        <label>Number of Passenger Seats</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <description>Asset Purchase Date - User Defined</description>
        <inlineHelpText>Asset Purchase Date - User Defined</inlineHelpText>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchased_Value__c</fullName>
        <label>Purchased Value</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Registration_Expiration__c</fullName>
        <label>Registration Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Location__c</fullName>
        <description>Service Location serves as a physical location of an Asset Tag.  This can be used in a complementary fashion with a &quot;Location&quot; which is a Maintenance Asset Record Type</description>
        <inlineHelpText>Service Location Serves as a Physical Location to identify where a Maintenance Asset is Located.  This can be used in a complementary fashion with a &quot;Functional Location&quot; which is a Maintenance Asset Record Type</inlineHelpText>
        <label>Service Location</label>
        <picklist>
            <picklistValues>
                <fullName>Site 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>State/Province for Asset Tag Address - User Defined</description>
        <inlineHelpText>State/Province Address</inlineHelpText>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>